<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout_viewprofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_start"
    android:paddingTop="@dimen/padding_common"
    android:paddingEnd="@dimen/padding_common">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_common"
        android:drawableStart="@drawable/ic_school_28dp"
        android:drawablePadding="@dimen/padding_drawable"
        android:textColor="@android:color/black"
        android:text="@string/profile_graduated" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_common"
        android:drawableStart="@drawable/ic_android_28dp"
        android:textColor="@android:color/black"
        android:drawablePadding="@dimen/padding_drawable"
        android:text="@string/profile_developer" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:layout_marginBottom="@dimen/margin_common"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"

        android:layout_marginBottom="@dimen/margin_common"
        android:text="@string/profile_description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator"
        android:layout_marginBottom="@dimen/margin_common"
        android:background="@color/colorPrimaryDark" />


    <EditText
        android:id="@+id/edittext_viewprofile_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_common"
        android:hint="@string/profile_message_hint"
        android:inputType="text"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_viewprofile_send_email"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_common"
            android:layout_weight="1"
            android:text="@string/profile_send_email"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_viewprofile_send_message"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_send_message"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imagebutton_viewprofile_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/padding_common"
            android:src="@drawable/ic_telegram_28dp"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/imagebutton_viewprofile_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/padding_common"
            android:src="@drawable/ic_instagram_28dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>